--- a/css/style.css
+++ b/css/style.css
@@ -67,153 +67,218 @@ VARIABLES
 /*----------------------
 GLOBAL
 ------------------*/
-    body{
-        background-color: var(--white);
-        text-decoration: none;
-        color: var(--white);
-        font-family: 'Encode Sans', sans-serif;
-        overflow-x: hidden;
-    }
-    
-    a{
-        text-decoration: none;
-    }
+body{
+    background-color: var(--white);
+    text-decoration: none;
+    color: var(--white);
+    font-family: 'Encode Sans', sans-serif;
+}
+
+a{
+    text-decoration: none;
+}
 
 .container{
     max-width: 1024px; 
     margin: 0 auto;
-    padding-left: 80px;
-    position: relative;
-    z-index: 10;
-}
-
-.container--top{
-    background-color: var(--white);
     position: relative;
 }
 
-
+@media (min-width:768px){
+    .container{
+        padding-left: 80px;
+    }
+}
 
 /*------------------
 IMAGEN DE FONDO 
 ----------------------*/
 .bootcamp{
-    background-image: url('../img/01.jpg') ;
+    background-image: url('../img/02.jpg') ;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #360b6d71;
+    background-color: #3123ae79; 
     background-blend-mode: overlay;
-    position: relative;
-    z-index: -5;
-    padding-top: 94px;
 }
 
+@media (max-width:767px){
+    .bootcamp{
+        padding: 38px 32px;
+        /* padding-left: 38px; */
+    }
+}
+
+@media (min-width:768px){
+    .bootcamp{
+        padding-top: 94px;
+    }
+}
 
 /*-------------------
 HEADER
 ----------------*/
 
+.bootcamp{
+    overflow: hidden;
+}
 
 /* Titulo con detalle
 --------------------*/
 
 .bootcamp__heading{
-    font-size: var(--font-size-xl);
-    margin-bottom: 21px;
     color: var(--white);
     background-image: url(../img/logo_01.png);
     background-repeat: no-repeat;
     background-position: left center;
-    background-size: 5%;
-    padding-left: 56px;
 }
 
 .bootcamp__heading > span{
     display: inline-block;
-    font-size: var(--font-size-md);
-    padding-left: 25px;
-    margin-left: 15px;
     position: relative;
     font-weight: 100;
 }
-
 .bootcamp__heading > span::before{
     content: '';
     display: inline-block;
     position: absolute;
+    top: 10px;
     left: 0;
-    top: 9px;
     border-left: 2px solid var(--white);
-    height: 27px;
+}
+
+@media (max-width:767px){
+    .bootcamp__heading{
+        font-size: 30px;
+        background-size: 30px;
+        padding-left: 40px;
+    }
+
+    .bootcamp__heading > span{
+        font-size: 20px;
+        padding-left: 15px;
+        margin-left: 8px;
+    }
+    .bootcamp__heading > span::before{
+        height: 20px;
+        border-width: 1px;
+    }
+}
+
+@media (min-width:768px){
+    .bootcamp__heading{
+        font-size: var(--font-size-xl);
+        background-size: 45px;
+        padding-left: 56px;
+    }
+    .bootcamp__heading > span{
+        font-size: var(--font-size-md);
+        padding-left: 25px;
+        margin-left: 15px;
+    }
+
+    .bootcamp__heading > span::before{
+        height: 27px;
+    }
 }
 
 /*Subtitulo
 -----------------*/
 
 .bootcamp__sub-heading{
-    font-size: var(--font-size-lg);
     color: var(--green-light);
     font-weight: 100;
-    margin-bottom: 58px;
-    position: relative;
 }
 
-.bootcamp__sub-heading:nth-child(2){
-    margin-bottom: 20px;
+@media (max-width:767px){
+    .bootcamp__sub-heading{
+        font-size: 18px;
+        margin-bottom: 48px;
+    }
+    .container > .bootcamp__sub-heading{
+        font-size: var(--font-size-md);
+        margin-bottom: 10px;
+    }
 }
 
+@media (min-width:768px){
+    .bootcamp__sub-heading{
+        font-size: var(--font-size-lg);
+        margin-bottom: 60px;
+    }
+    .container > .bootcamp__sub-heading{
+        margin-bottom: 20px;
+        font-size: var(--font-size-md);
+    }
+}
 
 /*Lista
 --------------------*/
 
-.bootcamp__metainfo{
-    margin-bottom: 35px;
-}
-
 .bootcamp__metainfo li{
     color: var(--white);
     font-size: var(--font-size-sm);
-    display: inline-block;
-    position: relative;
-    min-width: 75px;
-    padding-top: 52px;
-    text-align: center;
 }
 
-.bootcamp__metainfo li::before{
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 75px;
-    height: 1px;
-    background-color: var(--white);
-    transform: translate3d(0,-10px,0);
+@media (max-width:767px){
+    .bootcamp__metainfo li{
+        display: block;
+        padding-left: 40px;
+        padding-bottom: 50px;
+    }
+
 }
 
-.bootcamp__metainfo li:nth-of-type(1n+2){
-    margin-left: 61px;
+@media (min-width:768px){
+    .bootcamp__metainfo{
+        margin-bottom: 35px;
+    }
+    .bootcamp__metainfo li{
+        display: inline-block;
+        min-width: 75px;
+        padding-top: 52px;
+        text-align: center;
+    }
+    .bootcamp__metainfo li::before{
+        content: '';
+        display: block;
+        position: absolute;
+        width: 75px;
+        height: 1px;
+        background-color: var(--white);
+        transform: translate3d(0,-10px,0);
+    }
+    .bootcamp__metainfo li:nth-of-type(1n+2){
+        margin-left: 61px;
+    }
 }
 
 /*Fondos segun info*/
-li[aria-label]{
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: 30%;
-}
 
+li[aria-label]{
+    background-repeat: no-repeat;
+}
 li[aria-label="Fecha de inicio"]{
     background-image: url(../img/calendar.png);
 }
-
 li[aria-label="Asistencia"]{
     background-image: url(../img/presen.png);
 }
-
 li[aria-label="Dónde"]{
     background-image: url(../img/map.png);
     background-size: 20%;
+}
+
+@media (max-width:767px){
+    li[aria-label]{
+        background-size: 22px;
+    }
+}
+
+@media(min-width:768px){
+    li[aria-label]{
+        background-position: top center;
+        background-size: 30%;
+    }
 }
 
 abbr[title="Abril"]{
@@ -222,53 +287,94 @@ abbr[title="Abril"]{
 
 /*Explicacion curso
 -------------------*/
-
-.bootcamp__lead{
-    font-size: 32px;
-    max-width: 760px;
-    font-weight: 100;
-    margin-bottom: 256px;
-    
-}
-
 .bootcamp__text{
     font-size: var(--font-size-base);
     color: var(--gray-dark);
     line-height: 1.81;
-    max-width: 593px;
-    margin-bottom: 20px;
 }
 
+@media(max-width:767px){
+    .bootcamp__lead{
+        max-width: 262px;
+        font-weight: 100;
+        font-size: 20px;
+        margin-bottom: 174px;
+        opacity: 0.49;
+    }
+    .bootcamp__text{
+        max-width: 262px;
+        opacity: 0.49;
+        margin-bottom: 34px;
+    }
+}
+
+@media(min-width:768px){
+    .bootcamp__lead{ 
+        font-size: var(--font-size-lg);
+        max-width: 760px;
+        font-weight: 100;
+        margin-bottom: 256px;
+    }
+    .bootcamp__text{
+        max-width: 593px;
+        margin-bottom: 40px;
+    }
+}
 
 /*Boton*/
+
 .btn{
-    background-color: transparent;
-    padding: 10px 25px;
+    background-color: #fff;
+    padding: 10px 35px;
     color: var(--purple);
     border: 1px solid var(--purple);
     border-radius: 25px;
     cursor: pointer;
-    margin-top: 40px;
+    margin-bottom: 72px;
+    transition: all 150ms linear;
 }
 
-.retoque{
-    width: 100%;
-    height: auto;
-    background-color: #fff;
+.btn:hover{
+    color: var(--white);
+    background-color: var(--purple);
+}
+
+@media(max-width:767px){
+    .btn{
+        width: 100%;
+        margin: 0 auto;
+    } 
+}
+
+.skew{
     position: relative;
 }
 
-.retoque::before{
+.skew::before{
     content: '';
     display: block;
     position: absolute;
-    top: -93px;
+    top: 140px;
     right: 0;
-    left: -131px;
+    left: 0;
     bottom: 0;
-    height: 400px;
-    width: 130%;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 -40px 1px rgba(255, 255, 255, .3);
-    transform: rotate(10deg);
+    box-shadow: 0 -15px 1px rgba(255, 255, 255, .4);
+    transform:  skewY(15deg) scale(3);
 }
+
+
+@media (max-width:767px){
+    .skew::before{
+        top: 170px;
+        box-shadow: 0 -10px 1px rgba(255, 255, 255, .4);
+    }
+}
+
+@media (min-width:768px){
+    .skew::before{
+        box-shadow: 0 -15px 1px rgba(255, 255, 255, .4);
+    }
+}
+
+
