--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ VARIABLES
     --font-size-md:    26px;
     --font-size-lg:    32px;
     --font-size-xl:    45px;
+    --breakpoint1:     768px;
 }
 
 /*----------------------
@@ -79,9 +80,9 @@ a{
 }
 
 .container{
+    position: relative;
     max-width: 1024px; 
     margin: 0 auto;
-    position: relative;
 }
 
 @media (min-width:768px){
@@ -94,22 +95,23 @@ a{
 IMAGEN DE FONDO 
 ----------------------*/
 .bootcamp{
-    background-image: url('../img/02.jpg') ;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('../img/02.jpg');
     background-color: #3123ae79; 
     background-blend-mode: overlay;
 }
 
 @media (max-width:767px){
     .bootcamp{
+        background-position: -170px -110px;
         padding: 38px 32px;
-        /* padding-left: 38px; */
     }
 }
 
 @media (min-width:768px){
     .bootcamp{
+        background-position: 0 -265px;
         padding-top: 94px;
     }
 }
@@ -126,16 +128,16 @@ HEADER
 --------------------*/
 
 .bootcamp__heading{
-    color: var(--white);
-    background-image: url(../img/logo_01.png);
-    background-repeat: no-repeat;
     background-position: left center;
+    background-repeat: no-repeat;
+    background-image: url(../img/logo_01.png);
+    color: var(--white);
+    font-weight: 100;
 }
 
 .bootcamp__heading > span{
-    display: inline-block;
     position: relative;
-    font-weight: 100;
+    display: inline-block;
 }
 .bootcamp__heading > span::before{
     content: '';
@@ -147,33 +149,40 @@ HEADER
 }
 
 @media (max-width:767px){
+    .bootcamp__header{
+        margin-bottom: 174px;
+    }
+
     .bootcamp__heading{
-        font-size: 30px;
-        background-size: 30px;
         padding-left: 40px;
+        background-size: 30px;
+        font-size: 30px;
     }
 
     .bootcamp__heading > span{
-        font-size: 20px;
-        padding-left: 15px;
         margin-left: 8px;
+        padding-left: 15px;
+        font-size: 20px;
     }
     .bootcamp__heading > span::before{
-        height: 20px;
         border-width: 1px;
+        height: 20px;
     }
 }
 
 @media (min-width:768px){
+    .bootcamp__header{
+        margin-bottom: 256px;
+    }
     .bootcamp__heading{
-        font-size: var(--font-size-xl);
-        background-size: 45px;
         padding-left: 56px;
+        background-size: 45px;
+        font-size: var(--font-size-xl);
     }
     .bootcamp__heading > span{
-        font-size: var(--font-size-md);
-        padding-left: 25px;
         margin-left: 15px;
+        padding-left: 25px;
+        font-size: var(--font-size-md);
     }
 
     .bootcamp__heading > span::before{
@@ -191,19 +200,19 @@ HEADER
 
 @media (max-width:767px){
     .bootcamp__sub-heading{
-        font-size: 18px;
         margin-bottom: 48px;
+        font-size: 18px;
     }
     .container > .bootcamp__sub-heading{
-        font-size: var(--font-size-md);
         margin-bottom: 10px;
+        font-size: var(--font-size-md);
     }
 }
 
 @media (min-width:768px){
     .bootcamp__sub-heading{
-        font-size: var(--font-size-lg);
         margin-bottom: 60px;
+        font-size: var(--font-size-lg);
     }
     .container > .bootcamp__sub-heading{
         margin-bottom: 20px;
@@ -220,10 +229,13 @@ HEADER
 }
 
 @media (max-width:767px){
+    .bootcamp__metainfo{
+        margin-bottom: 35px;
+    }
     .bootcamp__metainfo li{
         display: block;
+        padding-bottom: 20px;
         padding-left: 40px;
-        padding-bottom: 50px;
     }
 
 }
@@ -254,83 +266,86 @@ HEADER
 
 /*Fondos segun info*/
 
-li[aria-label]{
+.bootcamp__logo{
     background-repeat: no-repeat;
 }
-li[aria-label="Fecha de inicio"]{
+.bootcamp__logo:nth-of-type(1){
     background-image: url(../img/calendar.png);
 }
-li[aria-label="Asistencia"]{
+.bootcamp__logo:nth-of-type(2){
     background-image: url(../img/presen.png);
 }
-li[aria-label="Dónde"]{
+.bootcamp__logo:nth-of-type(3){
     background-image: url(../img/map.png);
-    background-size: 20%;
+    background-size: 18px;
 }
 
 @media (max-width:767px){
-    li[aria-label]{
+    .bootcamp__logo{
         background-size: 22px;
     }
 }
 
 @media(min-width:768px){
-    li[aria-label]{
+    .bootcamp__logo{
         background-position: top center;
-        background-size: 30%;
+        background-size: 20px;
     }
 }
 
-abbr[title="Abril"]{
+abbr{
     text-decoration: none;
 }
 
 /*Explicacion curso
 -------------------*/
+
+.bootcamp__lead{
+    font-weight: 100;
+    line-height: 1.25;
+}
+
 .bootcamp__text{
     font-size: var(--font-size-base);
-    color: var(--gray-dark);
+    font-weight: 100;
     line-height: 1.81;
+    color: var(--gray-dark);
 }
 
 @media(max-width:767px){
     .bootcamp__lead{
         max-width: 262px;
-        font-weight: 100;
         font-size: 20px;
-        margin-bottom: 174px;
-        opacity: 0.49;
     }
     .bootcamp__text{
-        max-width: 262px;
-        opacity: 0.49;
+        max-width: 262px; 
         margin-bottom: 34px;
     }
 }
 
 @media(min-width:768px){
     .bootcamp__lead{ 
-        font-size: var(--font-size-lg);
         max-width: 760px;
-        font-weight: 100;
-        margin-bottom: 256px;
+        font-size: var(--font-size-lg);
     }
     .bootcamp__text{
-        max-width: 593px;
         margin-bottom: 40px;
+        max-width: 593px;
     }
 }
 
 /*Boton*/
 
 .btn{
-    background-color: #fff;
-    padding: 10px 35px;
-    color: var(--purple);
+    display: inline-block;
     border: 1px solid var(--purple);
     border-radius: 25px;
-    cursor: pointer;
     margin-bottom: 72px;
+    padding: 10px 35px;
+    background-color: #fff;
+    font-size: 18px;
+    color: var(--purple);
+    cursor: pointer;
     transition: all 150ms linear;
 }
 
@@ -341,6 +356,7 @@ abbr[title="Abril"]{
 
 @media(max-width:767px){
     .btn{
+        display: block;
         width: 100%;
         margin: 0 auto;
     } 
@@ -359,7 +375,7 @@ abbr[title="Abril"]{
     left: 0;
     bottom: 0;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 -15px 1px rgba(255, 255, 255, .4);
+    box-shadow: 0 -15px 0px rgba(255, 255, 255, .4);
     transform:  skewY(15deg) scale(3);
 }
 
@@ -367,13 +383,13 @@ abbr[title="Abril"]{
 @media (max-width:767px){
     .skew::before{
         top: 170px;
-        box-shadow: 0 -10px 1px rgba(255, 255, 255, .4);
+        box-shadow: 0 -10px 0px rgba(255, 255, 255, .4);
     }
 }
 
 @media (min-width:768px){
     .skew::before{
-        box-shadow: 0 -15px 1px rgba(255, 255, 255, .4);
+        box-shadow: 0 -15px 0px rgba(255, 255, 255, .4);
     }
 }
 
